# thinkwhy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_inbox.txt  test_inbox_spaces.txt
script/: add_note.py  browse.py  llm.py  manage.py  parse.py
src/manage/: main.py
src/manage/modules/: browse.py  llm.py  manage.py  parse.py
