[project]
name = "thinkwhy"
version = "0.1.0"
description = "note management tool"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.3.1",
    "google-genai>=1.52.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "textual>=6.7.1",
]

[project.scripts]
manage = "manage.main:cli"
